# haruspex

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  main.yml
src/: lib.rs  main.rs
