[package]
name = "haruspex"
version = "0.2.0-alpha"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2021"
description = "Vulnerability research assistant that extracts pseudo-code from IDA Hex-Rays decompiler."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/haruspex"
documentation = "https://0xdeadbeef.info/haruspex/haruspex/"
license = "MIT"
keywords = ["reverse-engineering", "binary-file", "vuln-dev", "ida", "idalib"]
categories = ["command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", "tests/*"]

[dependencies]
idalib = "0.4"
anyhow = "1.0"
thiserror = "2.0"

[build-dependencies]
idalib-build = "0.4"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
strip = true
# opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
