[package]
name = "haruspex"
version = "0.9.4-alpha"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Vulnerability research assistant that extracts pseudocode from IDA Hex-Rays decompiler."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/haruspex"
documentation = "https://0xdeadbeef.info/haruspex/haruspex/"
license = "MIT"
keywords = ["reverse-engineering", "binary-file", "vuln-dev", "ida", "idalib"]
categories = ["security", "command-line-utilities"]
exclude = [
    ".cargo/*",
    ".github/*",
    ".img/*",
    ".gitignore",
    ".taplo.toml",
    "tests/*",
    "ida-plugin.json",
    "ida-plugin-stub.py",
]

[dependencies]
idalib = "0.9"
anyhow = "1.0"
thiserror = "2.0"

[build-dependencies]
idalib-build = "0.9"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
debug = false

[lints]
workspace = true

[workspace.lints.rust]
missing_docs = { level = "warn" }
# idalib-build emits a duplicate -rpath for libida/libidalib on macOS and Linux
linker_messages = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
# allow some lints
blanket_clippy_restriction_lints = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return = "allow"
question_mark_used = "allow"
print_stdout = "allow"
print_stderr = "allow"
min_ident_chars = "allow"
single_char_lifetime_names = "allow"
impl_trait_in_params = "allow"
missing_inline_in_public_items = "allow"
inline_modules = "allow"
single_call_fn = "allow"
use_debug = "allow"
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"
